--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
      "name": "portf-backend-gemini",
      "version": "1.0.0",
-     "main": "api/server.js",
+     "main": "server.js",
      "scripts": {
-          "dev": "node api/server.js",
-          "start": "node api/server.js"
+          "dev": "node server.js",
+          "start": "node server.js",
+          "docker:build": "docker build -t api-chatbot-simplify:latest .",
+          "docker:up": "docker compose up -d --build",
+          "docker:down": "docker compose down",
+          "docker:logs": "docker compose logs -f --tail=200 api-chatbot"
      },
      "dependencies": {
           "axios": "^1.10.0",
