--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
      "scripts": {
           "dev": "node server.js",
           "start": "node server.js",
-          "docker:build": "docker build -t api-chatbot-simplify:latest .",
-          "docker:up": "docker compose up -d --build",
-          "docker:down": "docker compose down",
-          "docker:logs": "docker compose logs -f --tail=200 api-chatbot"
+          "docker:setup": "./docker.sh --setup",
+          "docker:resetup": "./docker.sh --resetup"
      },
      "dependencies": {
           "axios": "^1.10.0",
