--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,14 @@ jobs:
               echo "DEPLOY_PATH secret belum diset."
               exit 1
             fi
+            if [ ! -d "$DEPLOY_PATH/.git" ]; then
+              echo "Folder deploy bukan git repository: $DEPLOY_PATH"
+              exit 1
+            fi
             cd "$DEPLOY_PATH"
+            if ! git config --global --get-all safe.directory | grep -Fxq "$DEPLOY_PATH"; then
+              git config --global --add safe.directory "$DEPLOY_PATH"
+            fi
             git fetch origin
             git reset --hard origin/main
             ./docker.sh --resetup
